--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
         if (!text) throw new Error('Text is required');
         if (!apiKey) throw new Error('API key is required');
 
-        const response = await fetch('https://tts-worker.your-subdomain.workers.dev', {
+        const response = await fetch('https://tts-worker.fd26161b.tts-worker.pages.dev', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
